# prodigy-test

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  TODO.txt
cmake/: BoostTestTarget.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/base/: cache_line_size.h  enum_map.h  enum_traits.h
src/board/: CMakeLists.txt  color.cpp  color.h  coordinate.cpp  coordinate.h  file.cpp  file.h  piece_type.cpp  piece_type.h  rank.cpp  rank.h
src/board/tests/: CMakeLists.txt  color.cpp  coordinate.cpp  file.cpp  piece_type.cpp  rank.cpp
src/core/: CMakeLists.txt  engine.cpp  engine.h
src/fen/: fen.h
src/uci/: CMakeLists.txt  uci.cpp  uci.h
