cmake_minimum_required(VERSION 3.25)
project(prodigy VERSION 0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Boost 1.80 REQUIRED COMPONENTS unit_test_framework)
include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(BoostTestTarget)
enable_testing()
include_directories(src)
add_subdirectory(src)
